--- a/src/component/ContentScreen.module.css
+++ b/src/component/ContentScreen.module.css
@@ -25,12 +25,12 @@
     left: 0;
 }
 .bannermobile {
-    height:53px;
+    height: var(--banner-height-mobile);
 }
 .bottombar {
     position: fixed;
     width: 100%;
-    height: 54px;
+    height: var(--bottom-bar-height);
     z-index: 2;
     bottom: 0;
     left: 0;
